--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,34 @@
     margin: 0%;
     box-sizing: border-box;
 }
+:root {
+    --l-text-color: #eeeeee;
+    --l-title-color: rgb(189, 113, 47);
+    --l-mb-color: #ff00ff;
+    --l-filter-black: #35353a;
+  }
+  ::-webkit-scrollbar,
+  ::-webkit-scrollbar-track {
+    width: 0.8vw;
+    background: var(--l-filter-black);
+  }
+  ::-webkit-scrollbar-thumb {
+    background: var(--l-mb-color);
+  } 
 header {
-    background-color: rgba(0, 0, 0, 0.219);
+    background: #0000001e;
+    background-size: 55px;
     z-index: 10;
     position: fixed;
     height: 60px;
     width: 100%;
 }
 .content {
-    max-width: 1200px;
+    max-width: 900px;
     margin: auto;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .head {
     display: flex;
@@ -25,6 +41,7 @@ header {
 .logo {
     width: 45px;
     height: 45px; 
+    border-radius: 50%;
 }
 .logo:hover {
     width: 45px;
@@ -47,12 +64,15 @@ header {
     text-decoration: none;
     color: #ffffff;
 }
+.menu_item:hover {
+    text-decoration: underline;
+}
 .main_fone {
-    background: url('../icons/fone.png');
-    background-position: center;
+    background: url('../icons/fone1.png');
+    background-position: top;
     background-repeat: no-repeat;
     background-size: 100%;
-    backdrop-filter: drop-shadow(0px 0px 5px #000000);
+    backdrop-filter: drop-shadow( 0px 0px 10px #000000);
     width: 100%;
     height: 100vh;
 }
@@ -69,8 +89,60 @@ header {
 .title {
     margin-bottom: 15px;
     font-size: 36px;
+    cursor: default;
+}
+.title1 {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 .title2 {
     font-size: 20px;
     text-align: center;
+    cursor: default;
+}
+.about_body {
+    display: flex;
+    flex-direction: column;
+    background: #2c2c30;
+}
+.about {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0px 30px 0px;
+    width: 100%;
+}
+.about_text {
+    margin-right: 30px;
+    flex: 2;
+}
+.white {
+    color: #ffffff;
+}
+.text {
+    text-align: justify;
+    font-size: 20px;
+}
+.small_img {
+    max-width: 250px;
+    max-height: 200px;
+    flex: 1;
+}
+.rules_body {
+    background: rgb(211, 211, 211);
+    display: flex;
+    flex-direction: column;
+}
+.rules {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0px 30px 0px;
+    width: 100%;
+}
+.rules_text {
+    margin-left: 30px;
 }
