--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
     margin: 0%;
     box-sizing: border-box;
+    font-family: 'PT Sans', sans-serif;
 }
 :root {
     --l-text-color: #eeeeee;
@@ -17,8 +20,10 @@
     background: var(--l-mb-color);
   } 
 header {
-    background: #0000001e;
-    background-size: 55px;
+    background: #0000003a;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: top;
     z-index: 10;
     position: fixed;
     height: 60px;
@@ -58,26 +63,27 @@ header {
     justify-content: space-between;
     width: 300px;
     padding: 0%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .menu_item {
     cursor: pointer;
     text-decoration: none;
     color: #ffffff;
+    font-weight: 900;
 }
 .menu_item:hover {
-    text-decoration: underline;
+    color: #eeeeee;
 }
 .main_fone {
-    background: url('../icons/fone1.png');
-    background-position: top;
+    background: url('../icons/fone2.png');
+    background-position:top;
     background-repeat: no-repeat;
     background-size: 100%;
-    backdrop-filter: drop-shadow( 0px 0px 10px #000000);
     width: 100%;
-    height: 100vh;
+    height: 550px;
 }
 .title_box {
-    margin-top: 55vh;
+    margin-top: 355px;
     display: flex;
     align-items:center;
     justify-content:space-between;
@@ -87,7 +93,7 @@ header {
     width: 515px;
 }
 .title {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-size: 36px;
     cursor: default;
 }
@@ -97,7 +103,7 @@ header {
     margin-bottom: 20px;
 }
 .title2 {
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
     cursor: default;
 }
@@ -112,7 +118,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 0px 30px 0px;
-    width: 100%;
 }
 .about_text {
     margin-right: 30px;
@@ -141,8 +146,65 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 0px 30px 0px;
-    width: 100%;
 }
 .rules_text {
     margin-left: 30px;
+}
+
+@media (max-width: 1000px) {
+    .content {
+        max-width: 750px;
+        padding: 0px 10px 0px 10px;
+    }
+    .head {
+        width: 750px;
+    }
+    .main_fone {
+        background-size: 200%;
+        background-position: top;
+        height: 80vh;
+    }
+    .title_box {
+        width: 450px;
+        margin-top: 45vh;
+    }
+    .title {
+        text-align: center;
+    }
+    .title2 {
+        text-align: justify;
+    }
+    .title1 {
+        font-size: 24px;
+    }
+    .hiden {
+        width: 0px;
+        height: 0px;
+    }
+    .rules_text {
+        margin-left: 0;
+    }
+}
+@media (max-width: 550px) {
+    .content {
+        max-width: 355px;
+    }
+    .main_fone {
+        height: 55vh;
+    }
+    .title_box {
+        margin-top: 200px;
+    }
+    .small_img {
+        display: none;
+    }
+    .about_text {
+        margin: 0;
+    }
+    .title1 {
+        font-size: 14px;
+    }
+    .text {
+        font-size: 16px;
+    }
 }
