--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 300px;
+    width: 350px;
     padding: 0%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -107,6 +107,10 @@ header {
     text-align: center;
     cursor: default;
 }
+.link {
+    color: #fff;
+    text-decoration: none;
+}
 .about_body {
     display: flex;
     flex-direction: column;
@@ -149,6 +153,34 @@ header {
 }
 .rules_text {
     margin-left: 30px;
+}
+.margt {
+    margin-top: 20px;
+}
+footer {
+    background-color: #35353a;
+    height: 75px;
+}
+.footer {
+    height: 75px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+.btn {
+    background-color: #bb3bbb;
+    height: 25px;
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15%;
+    transition: all 0.1s;
+}
+.btn:hover {
+    background-color: #ff00ff;
 }
 
 @media (max-width: 1000px) {
