decorations and optimization
mobile adaptive
image poster on top
add css global color

--- a/assets/documents.css
+++ b/assets/documents.css
@@ -2,10 +2,21 @@
   --background: #353230;
   --brand: #f66c00;
   --color: #d6d6d6;
+  --sideMenu: var(--color);
+  --border: var(--color);
 }
 
+@media (max-width: 768px) {
+  .sideMenuContainer {
+    display: none;
+  }
+}
+@media (max-width: 450px) {
+  header .joinServer {
+    display: none;
+  }
+}
 body {
-  margin-top: 100px;
   background: repeating-linear-gradient(45deg, #000000 0px, #000000 1px, var(--background) 1px, var(--background) 20px);
   color: var(--color);
 }
@@ -14,7 +25,7 @@ body::-webkit-scrollbar {
   background: var(--background);
 }
 body::-webkit-scrollbar-thumb {
-  background: var(--color);
+  background: var(--border);
   border: 4px solid var(--background);
 }
 
@@ -32,6 +43,16 @@ ol li.title:before {
   content: "";
 }
 
+.poster {
+  height: min(50vh, 50vw);
+  overflow: hidden;
+  padding: 0;
+}
+.poster .header-title {
+  top: calc(min(50vh, 50vw)/2);
+  text-shadow: 0 0 10px black;
+}
+
 header {
   top: 0;
   height: 50px;
@@ -40,6 +61,7 @@ header {
   position: fixed;
   width: 100%;
   box-shadow: 0 0 10px -3px #000;
+  z-index: 1;
 }
 header > div {
   position: relative;
@@ -85,7 +107,7 @@ header a[href]:not(.inactive):hover:after {
 }
 header .joinServer {
   position: absolute;
-  right: 0;
+  right: var(--bs-gutter-x, 0.75rem);
 }
 
 .joinServer {
@@ -107,7 +129,7 @@ main {
 
 .sideMenu {
   position: sticky;
-  top: max(5%, 70px);
+  top: max(5%, 100px);
   list-style: none;
   padding: 0;
   margin: auto;
@@ -121,7 +143,7 @@ main {
 .sideMenu li a {
   padding: 0.2em;
   color: var(--background) !important;
-  background: var(--color);
+  background: var(--sideMenu);
   opacity: 0.8;
   transition: 0.2s;
   text-decoration: none;
@@ -134,19 +156,21 @@ main {
 }
 
 main {
-  border: 3px solid var(--color);
+  border: 3px solid var(--border);
   border-bottom: none;
   border-top: none;
 }
 
 .documentation {
-  border-left: 3px solid var(--color);
+  border-left: 3px solid var(--border);
 }
 
 h2 {
-  background: var(--color);
+  position: sticky;
+  top: 49px;
+  background: var(--border);
   color: var(--background);
-  margin: auto calc(0px - var(--bs-gutter-x)/ 2);
+  margin: 0 calc(0px - var(--bs-gutter-x)/ 2) 0.5rem;
 }
 
 footer {
