--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     --l-title-color: rgb(189, 113, 47);
     --l-mb-color: #ff00ff;
     --l-filter-black: #35353a;
+    --background: #35353a;
   }
   ::-webkit-scrollbar,
   ::-webkit-scrollbar-track {
@@ -18,12 +19,14 @@
   }
   ::-webkit-scrollbar-thumb {
     background: var(--l-mb-color);
-  } 
+  }
+  body {
+    background: repeating-linear-gradient(45deg, #000000 0px, #000000 1px, var(--background) 1px, var(--background) 20px);
+  }
   header {
     background: #0000003a;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: top;
+    
+  backdrop-filter: blur(15px);
     z-index: 10;
     position: fixed;
     height: 60px;
@@ -42,6 +45,7 @@
     align-items: center;
     width: 900px;
     height: 60px;
+    padding: 0px 15px;
 }
 .logo {
     width: 45px;
@@ -70,9 +74,14 @@
     text-decoration: none;
     color: #ffffff;
     font-weight: 900;
+    transition: all 0.1s;
 }
 .menu_item:hover {
-    color: #eeeeee;
+    color: #ff00ff;
+    border-bottom: #ff00ff solid;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 .main_fone {
     background: url('../icons/fone2.png');
@@ -98,6 +107,12 @@
     cursor: default;
 }
 .title1 {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.r_title {
     font-size: 30px;
     text-align: center;
     margin-bottom: 20px;
@@ -199,33 +214,61 @@ footer {
     background-color: rgb(130, 53, 168);
 }
 .login {
-    display: block;
-    padding: 0px 2px 0px 2px;
     cursor: pointer;
     text-decoration: none;
     color: #ffffff;
     font-weight: 900;
+    transition: all 0.1s;
+}
+.login:hover {
+    color: #ff00ff;
+    border-bottom: #ff00ff solid;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 .rules_blank {
-    background-color: #35353a;
+    background: repeating-linear-gradient(45deg, #000000 0px, #000000 1px, var(--background) 1px, var(--background) 20px);
+}
+.poster {
+    width: 100%;
+    height: 35vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.poster_img {
+    width: 100%;
+    size: 100%;
+    
+}
+.poster_txt {
+    margin-top: 150px;
+    position: absolute;
 }
 .rules_menu {
-    margin-top: 100px;
+    margin: 100px 0px 100px 0px;
+    padding: 0px 15px 0px 15px;
     display: flex;
     justify-content: space-around;
     max-width: 100%;
+    background-color: #35353a;
 }
 .r_menu {
     display: block;
     list-style: none;
     text-align: left;
-    padding: 10px 30px 10px 0px;
+    padding: 30px 30px 0px 20px;
     width: 250px;
     border-right: #eeeeee;
     border-style: solid;
     border-bottom: none;
     border-top: none;
     border-left: none;
+    position: sticky;
+    top: 100px;
+    height: min-content;
 }
 .r_menu2 {
     display: inline-block;
@@ -237,15 +280,20 @@ footer {
 .r_menu_item {
     text-decoration: none;
     color: #fff;
-    margin: 5px 0px 5px 0px;
-    position: fixed;
+    margin: 0px 0px 5px 0px;
 }
 .rules_txt_box {
     margin: 0px 10px 15px 30px;
     text-align: left;
     width: 700px;
 }
-
+.to_up {
+    color: #fff;
+    position: absolute;
+    bottom: -400px;
+    left: 50px;
+    width: 50px;
+}
 @media (max-width: 1000px) {
     .content {
         max-width: 750px;
@@ -319,5 +367,11 @@ footer {
     }
     .r_menu {
         display: none;
+    }
+    .rules_menu {
+        margin-top: 30px;
+    }
+    .poster_txt {
+        margin-top: 50px;
     }
 }
